<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.otitan.ui.viewmodel.MainItemViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/kqzlzs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kqzlzs"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/wrzs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kqzlzs"
            android:padding="10dp"
            android:text="@string/wrzs"
            android:textColor="@color/white" />

        <com.otitan.customview.CustomCircleProgressBar
            android:id="@+id/circleProgress"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@+id/kqzlzs"
            app:inside_color="@color/linecolor"
            app:max_progress="500"
            app:outside_color="@color/color_zj_1"
            app:outside_radius="55dp"
            app:progress_text_color="@color/white"
            app:progress_text_size="20sp"
            app:progress_width="7dp"
            app:title="优"
            app:titleSize="12sp" />

        <LinearLayout
            android:id="@+id/pm10"
            style="@style/kqzl_linear"
            android:layout_below="@+id/kqzlzs"
            android:layout_marginTop="20dp">

            <TextView
                style="@style/kqzl_item_name"
                android:text="@string/pm10" />

            <TextView
                style="@style/kqzl_item_value"
                android:text="@{String.valueOf(viewmodel.evn.pm10)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no2"
            style="@style/kqzl_linear"
            android:layout_below="@+id/pm10">

            <TextView
                style="@style/kqzl_item_name"
                android:text="@string/no2" />

            <TextView
                style="@style/kqzl_item_value"
                android:text="@{String.valueOf(viewmodel.evn.no2)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/so2"
            style="@style/kqzl_linear"
            android:layout_below="@+id/no2">

            <TextView
                style="@style/kqzl_item_name"
                android:text="@string/so2" />

            <TextView
                style="@style/kqzl_item_value"
                android:text="@{String.valueOf(viewmodel.evn.so2)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/o3"
            style="@style/kqzl_linear"
            android:layout_below="@+id/so2">

            <TextView
                style="@style/kqzl_item_name"
                android:text="@string/o3" />

            <TextView
                style="@style/kqzl_item_value"
                android:text="@{String.valueOf(viewmodel.evn.o3)}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/co"
            style="@style/kqzl_linear"
            android:layout_below="@+id/o3">

            <TextView
                style="@style/kqzl_item_name"
                android:text="@string/co" />

            <TextView
                style="@style/kqzl_item_value"
                android:text="@{String.valueOf(viewmodel.evn.co)}" />
        </LinearLayout>
    </RelativeLayout>
</layout>
